--- a/raspiaudio-radio.yaml
+++ b/raspiaudio-radio.yaml
@@ -4,16 +4,13 @@ esphome:
   platformio_options:
     board_build.flash_mode: dio
     board_build.arduino.memory_type: qio_opi
-  on_boot:
-    then:
-      - switch.turn_on: dac_mute
 
 external_components:
-  - source:
-      type: git
-      url: https://github.com/gnumpi/esphome_audio
-      ref: main
-    components: [adf_pipeline, i2s_audio]
+  # - source:
+  #     type: git
+  #     url: https://github.com/gnumpi/esphome_audio
+  #     ref: main
+  #   components: [ adf_pipeline, i2s_audio ]
   # - source:
   #     type: local
   #     path: /external_components/esphome_audio/esphome/components
@@ -22,17 +19,16 @@ external_components:
       type: local
       path: /external_components/tetele_esphome/esphome/components
     components: [es8388]
-    # refresh: 0s
 
 esp32:
   board: esp32-s3-devkitc-1
   framework:
-    type: esp-idf
-    version: recommended
-    sdkconfig_options:
-      # need to set a s3 compatible board for the adf-sdk to compile
-      # board specific code is not used though
-      CONFIG_ESP32_S3_BOX_BOARD: "y"
+    type: arduino
+    # version: recommended
+    # sdkconfig_options:
+    #   # need to set a s3 compatible board for the adf-sdk to compile
+    #   # board specific code is not used though
+    #   CONFIG_ESP32_S3_BOX_BOARD: "y"
 
 ################
 psram: # TODO
@@ -110,23 +106,31 @@ binary_sensor:
     name: Volume button
     disabled_by_default: true
 
-  # - platform: gpio
-  #   pin:
-  #     number: GPIO10
-  #     mode:
-  #       input: true
-  #       pullup: true
-  #   id: jack_plugged
-  #   name: Jack plugged in
+  - platform: gpio
+    pin:
+      number: GPIO10
+      inverted: true
+      mode:
+        input: true
+        pullup: true
+    id: jack_plugged
+    name: Jack plugged in
+    disabled_by_default: true
+    filters:
+      - delayed_on_off: 0.3s
+    on_state:
+      then:
+        - script.execute: update_dac_mute
 
-  # - platform: gpio
-  #   pin:
-  #     number: GPIO21
-  #     mode:
-  #       input: true
-  #       pullup: true
-  #   id: usb_plugged
-  #   name: USB plugged in
+  - platform: gpio
+    pin:
+      number: GPIO21
+      mode:
+        input: true
+        pullup: true
+    id: usb_plugged
+    name: USB plugged in
+    disabled_by_default: true
 
   - platform: template
     id: button_check
@@ -174,6 +178,12 @@ sensor:
       mode:
         input: true
         pullup: true
+    on_anticlockwise:
+      then:
+        - media_player.volume_down: raspiaudio_speaker
+    on_clockwise:
+      then:
+        - media_player.volume_up: raspiaudio_speaker
 
   - platform: rotary_encoder
     name: "Function"
@@ -199,17 +209,15 @@ sensor:
     filters:
       - delta: 0.3
 
-switch:
+output:
   - platform: gpio
     id: dac_mute
-    name: DAC mute
     pin:
       number: GPIO46
-      # inverted: true
+      inverted: true
       mode:
         output: true
 
-output:
   - platform: ledc
     pin:
       number: GPIO41
@@ -226,55 +234,26 @@ i2s_audio:
   - id: i2s_shared
     i2s_lrclk_pin: GPIO16
     i2s_bclk_pin: GPIO5
-    access_mode: duplex
-
-adf_pipeline:
-  - platform: i2s_audio
-    type: audio_out
-    id: adf_i2s_out
-    i2s_audio_id: i2s_shared
-    i2s_dout_pin: GPIO17
-    # sample_rate: 16000
-    # adf_alc: true
-    # bits_per_sample: 32bit
-    # fixed_settings: true
-    # dac:
-    #   model: es8388
-    #   address: 0x10
-
-  - platform: i2s_audio
-    type: audio_in
-    id: adf_i2s_in
-    i2s_audio_id: i2s_shared
-    i2s_din_pin: GPIO4
-    # channel: right
-    pdm: false
-    # sample_rate: 16000
-    # bits_per_sample: 32bit
-    # fixed_settings: true
-    # adc:
-    #   model: es7210
-    #   address: 0x10
-
-microphone:
-  - platform: adf_pipeline
-    id: raspiaudio_microphone
-    keep_pipeline_alive: true
-    gain_log2: 3
-    pipeline:
-      - adf_i2s_in
-      - self
+    i2s_mclk_pin: GPIO0
 
 media_player:
-  - platform: adf_pipeline
+  - platform: i2s_audio
     id: raspiaudio_speaker
     name: None
-    internal: false
-    keep_pipeline_alive: true
-    pipeline:
-      - self
-      - resampler
-      - adf_i2s_out
+    dac_type: external
+    i2s_dout_pin: GPIO17
+    i2s_audio_id: i2s_shared
+    mode: mono
+    on_state:
+      then:
+        - script.execute: update_dac_mute
+
+microphone:
+  - platform: i2s_audio
+    id: raspiaudio_microphone
+    i2s_din_pin: GPIO4
+    adc_type: external
+    pdm: false
 
 display:
   - id: raspiaudio_display
@@ -289,3 +268,18 @@ display:
       it.fill(Color::WHITE);
       it.filled_circle(40, 32, 15, red);
       // it.print(0, 0, id(my_font), id(my_red), TextAlign::TOP_LEFT, "Hello World!");
+
+script:
+  - id: update_dac_mute
+    then:
+      - if:
+          condition:
+            and:
+              - media_player.is_playing
+              - binary_sensor.is_off: jack_plugged
+          then:
+            - logger.log: "Turn off DAC mute"
+            - output.turn_off: dac_mute
+          else:
+            - logger.log: "Turn on DAC mute"
+            - output.turn_on: dac_mute
