Add I2S media_player

--- a/raspiaudio-radio.yaml
+++ b/raspiaudio-radio.yaml
@@ -9,6 +9,10 @@ esphome:
   platformio_options:
     board_build.flash_mode: dio
     board_build.arduino.memory_type: qio_opi
+  on_boot:
+    priority: -100.0
+    then:
+      - output.turn_off: dac_mute
 
 external_components:
   # - source:
@@ -82,6 +86,11 @@ spi:
     # miso_pin: GPIOXX
     interface: hardware
 
+i2s_audio:
+  - id: i2s_shared
+    i2s_lrclk_pin: GPIO16
+    i2s_bclk_pin: GPIO5
+    i2s_mclk_pin: GPIO0
 
 #####################
 # Internal components
@@ -252,6 +261,12 @@ media_player:
     i2s_dout_pin: GPIO17
     i2s_audio_id: i2s_shared
     mode: mono
+    mute_pin:
+      number: GPIO46
+      inverted: true
+      mode:
+        output: true
+      allow_other_uses: true
 
 #########
 # Scripts
