--- a/esphome/muse-luxe.yaml
+++ b/esphome/muse-luxe.yaml
@@ -136,18 +136,32 @@ lvgl:
   displays:
     - raspiaudio_display
   pages:
+    # Main Page
     - id: main_page
       widgets:
         - label:
+            id: main_label
             align: CENTER
-            text: 'RASPIAUDIO'
+            text: "RASPIAUDIO"
+
 
     - id: listening_page
       widgets:
         - label:
             align: CENTER
-            text: 'LISTENING'
-
+            text: "LISTENING"
+            y: -30  # Position label higher to accommodate spinner
+        - spinner:
+            align: CENTER
+            y: 20  # Position spinner below the label
+            height: 50
+            width: 50
+            spin_time: 1000ms
+            arc_length: 60deg
+            arc_width: 8
+            indicator:
+              arc_color: 0x18bcf2
+              arc_width: 8
 
     - id: answering_page
       widgets:
@@ -286,6 +300,7 @@ media_player:
       mode:
         output: true
       allow_other_uses: true
+
 voice_assistant:
   id: va
   microphone: raspiaudio_microphone
@@ -298,6 +313,7 @@ voice_assistant:
         brightness: 100%
         effect: none
     - lvgl.page.show: listening_page
+
   on_tts_start:
     - logger.log: "🔵Voice Assistant is now streaming answer"
     - light.turn_on:
@@ -305,17 +321,21 @@ voice_assistant:
         brightness: 100%
         effect: none
     - lvgl.page.show: answering_page
+
+  # Ici on va vérifier régulièrement si le media_player diffuse toujours du son
+  # et on attend qu'il termine pour revenir à la page 'waiting_page'
   on_tts_end:
-    # Réaffiche la page 'waiting_page' après la fin du TTS
+    - logger.log: "🔵Waiting for media playback to finish"
     - wait_until:
         not:
-          media_player.is_playing: raspiaudio_speaker
-    - logger.log: "🔵TTS finished, switching to waiting page"
+          media_player.is_playing: raspiaudio_speaker  # On attend que la lecture se termine
+    - logger.log: "🔵TTS playback finished, switching to waiting page"
     - light.turn_on:
         id: screen_backlight
         brightness: 100%
         effect: none
     - lvgl.page.show: waiting_page
+
   on_client_connected:
     - if:
         condition:
@@ -323,12 +343,14 @@ voice_assistant:
         then:
           - voice_assistant.start_continuous
           - lvgl.page.show: waiting_page  # Afficher la page waiting au démarrage
+
   on_client_disconnected:
     - if:
         condition:
           switch.is_on: use_wake_word
         then:
           - voice_assistant.stop
+
   on_end:
     - delay: 100ms
     - wait_until:
@@ -336,6 +358,7 @@ voice_assistant:
           media_player.is_playing: raspiaudio_speaker
     - script.execute: reset_display
     - lvgl.page.show: waiting_page  # Réafficher la page waiting à la fin
+
   on_error:
     - light.turn_on:
         id: screen_backlight
