--- a/esphome/raspiaudio-radio.yaml
+++ b/esphome/raspiaudio-radio.yaml
@@ -1,6 +1,7 @@
 substitutions:
   name: raspiaudio-radio
   friendly_name: Raspiaudio Radio
+  raspiaudio_file: https://github.com/esphome/wake-word-voice-assistants/raw/main/casita/loading_320_240.png  
 
 esphome:
   name: ${name}
@@ -17,22 +18,25 @@ esphome:
           id: screen_backlight
           brightness: 100%
 
+
 external_components:
-  - source: github://pr#6956
+  - source: github://RASPIAUDIO/esphomeRadio@main
     components: [es8388]
     refresh: 0s
 
 esp32:
   board: esp32-s3-devkitc-1
   variant: esp32s3
-  flash_size: 4MB
+  flash_size: 8MB
   framework:
     type: arduino
 
-logger:
+
+ota:
+  platform: esphome
 
 api:
-  services:
+ services:
     - service: start_va
       then:
         - voice_assistant.start
@@ -40,27 +44,21 @@ api:
       then:
         - voice_assistant.stop
 
-ota:
-  platform: esphome
+wifi:
+    ap:
+     ssid: "Raspiaudio-radio"
+     password: "12345678"
+     
+captive_portal:     
 
 improv_serial:
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-  # Enable fallback hotspot (captive portal) in case Wi-Fi connection fails
-  ap:
-    ssid: "Raspiaudio-Radio"
-    password: "XXXXXXXXXXX"
-
-captive_portal:
+logger:
 
 ##########
 # Hardware Configuration
-
 es8388:
-  preset: raspiaudio_radio
+ 
 
 psram:
   mode: octal
@@ -113,14 +111,54 @@ light:
     id: screen_backlight
     name: Screen Backlight
     restore_mode: ALWAYS_ON
+    
+       
+globals:
+  - id: lightTO
+    type: int
+    initial_value: '0'
 
+interval:
+  - interval: 1sec
+    then:
+      - if:
+          condition:  
+            and:
+              - light.is_on: screen_backlight
+              - lambda: 'return id(lightTO) < 60;'              
+          then:
+#            - logger.log: "La lumière screen_backlight est allumée."
+            - lambda: |-
+                id(lightTO)++;
+#                ESP_LOGD("lightTO", "Compteur: %d", id(lightTO));
+          else:
+#            - logger.log: "La lumière screen_backlight est éteinte."
+            - lambda: |-
+                id(lightTO) = 0;
+            - light.turn_off: screen_backlight               
+           
+    
 microphone:
   - platform: i2s_audio
     id: raspiaudio_microphone
     i2s_din_pin: GPIO4
     adc_type: external
     pdm: false
-
+    
+image:
+  - file: "https://github.com/RASPIAUDIO/esphomeRadio/raw/main/Raspiaudio.png"
+    id: raspiIm
+    resize: 240x320
+    type: GRAYSCALE
+  - file:  "https://github.com/RASPIAUDIO/esphomeRadio/raw/main/WFWW.png" 
+    id: WFWWIm
+    resize: 240x320
+    type: GRAYSCALE
+  - file:  "https://github.com/RASPIAUDIO/esphomeRadio/raw/main/W.png" 
+    id: WIm
+    resize: 240x320
+    type: GRAYSCALE
+        
 display:
   - id: raspiaudio_display
     platform: ili9xxx
@@ -129,7 +167,7 @@ display:
     dc_pin: GPIO39
     reset_pin: GPIO9
     invert_colors: false
-    rotation: 270   # Set the rotation to 270 degrees
+    rotation: 90   
     update_interval: never
     auto_clear_enabled: false
 
@@ -139,14 +177,13 @@ lvgl:
     - raspiaudio_display
   pages:
     # Main Page
-    - id: main_page
+    - id: starting_page
       widgets:
-        - label:
-            id: main_label
+        - image:
             align: CENTER
-            text: "RASPIAUDIO"
-
-
+            src: raspiIm
+            id: img_id    
+  
     - id: listening_page
       widgets:
         - label:
@@ -173,9 +210,15 @@ lvgl:
 
     - id: waiting_page
       widgets:
-        - label:
+        - image:
             align: CENTER
-            text: 'Waiting for wakeword'
+            src: WFWWIm
+    
+    - id: waitingB_page
+      widgets:
+        - image:
+            align: CENTER
+            src: WIm        
 
 
 ###############
@@ -249,11 +292,17 @@ sensor:
         pullup: true
     on_anticlockwise:
       then:
+        - light.turn_on: screen_backlight      
+        - lambda: |-
+                id(lightTO) = 0;        
         - media_player.volume_down: raspiaudio_speaker
     on_clockwise:
       then:
         - media_player.volume_up: raspiaudio_speaker
-
+        - light.turn_on: screen_backlight
+        - lambda: |-
+                id(lightTO) = 0;        
+        
   - platform: rotary_encoder
     name: "Function"
     id: function_encoder
@@ -330,22 +379,21 @@ voice_assistant:
     - logger.log: "🔵Waiting for media playback to finish"
     - wait_until:
         not:
-          media_player.is_playing: raspiaudio_speaker  # On attend que la lecture se termine
+          media_player.is_playing: raspiaudio_speaker  # On attend que la lecture se termine    
     - logger.log: "🔵TTS playback finished, switching to waiting page"
-    - light.turn_on:
-        id: screen_backlight
-        brightness: 100%
-        effect: none
-    - lvgl.page.show: waiting_page
+    - script.execute: reset_display
 
   on_client_connected:
+    - delay: 5sec
     - if:
         condition:
           switch.is_on: use_wake_word
         then:
           - voice_assistant.start_continuous
-          - lvgl.page.show: waiting_page  # Afficher la page waiting au démarrage
-
+          - lvgl.page.show: waiting_page  
+        else:
+          - lvgl.page.show: waitingB_page  
+          
   on_client_disconnected:
     - if:
         condition:
@@ -357,9 +405,9 @@ voice_assistant:
     - delay: 100ms
     - wait_until:
         not:
-          media_player.is_playing: raspiaudio_speaker
+          media_player.is_playing: raspiaudio_speaker          
     - script.execute: reset_display
-    - lvgl.page.show: waiting_page  # Réafficher la page waiting à la fin
+
 
   on_error:
     - light.turn_on:
@@ -381,16 +429,18 @@ voice_assistant:
 script:
   - id: reset_display
     then:
-      - if:
-          condition:
+    - light.turn_on: screen_backlight
+    - lambda: |-
+                id(lightTO) = 0;    
+    - if:
+        condition:
             switch.is_on: use_wake_word
-          then:
-            - light.turn_on:
-                id: screen_backlight
-                brightness: 100%
-                effect: none
-          else:
-            - light.turn_off: screen_backlight
+        then:
+            - lvgl.page.show: waiting_page  # Réafficher la page waiting à la fin
+        else:
+            - lvgl.page.show: waitingB_page  # Réafficher la page waiting à la fin    
+    
+ 
 
   - id: update_dac_mute
     then:
